--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 }
 html {
     background-color: rgb(0,1,36);
-    background: linear-gradient(168deg, rgba(0,1,36,1) 44%, rgba(9,9,121,1) 72%, rgba(58,5,152,1) 100%);
+    background: linear-gradient(168deg, rgba(0,1,36,1) 24%, rgba(9,9,121,1) 72%, rgb(127, 5, 152) 100%);
     min-height: 100vh;
 }
 body{
@@ -40,7 +40,7 @@ h1{
     height: 100%;
     width: 100%;
     background-color: rgb(0,12,106);
-    background: radial-gradient(circle, rgb(8, 0, 78) 23%, rgba(58,5,152,1) 35%, rgba(0,0,0,0) 40%);
+    background: radial-gradient(circle, rgb(8, 0, 78) 23%, rgb(97, 22, 167) 35%, rgba(0,0,0,0) 40%);
 }
 
 @media only screen and (max-width: 1300px) {
@@ -61,5 +61,16 @@ h1{
     }
     h2,p{
         font-size: 1rem;
+    }
+}
+@media only screen and (max-width: 400px) {
+    .blackhole-inner{
+        height: -20vh;
+        left: -15vh;
+        height: 130%;
+    }
+    .blackhole-outer{
+        height: 80vh;
+        width: 100vw;
     }
 }
