--- a/style.css
+++ b/style.css
@@ -6,8 +6,14 @@
 }
 html {
     background-color: rgb(0,1,36);
-    background: linear-gradient(168deg, rgba(0,1,36,1) 24%, rgba(9,9,121,1) 72%, rgb(127, 5, 152) 100%);
     height: 100%;
+}
+.background{
+    z-index: -99;
+    height: 100%;
+    width: 100%;
+    position: fixed;
+    background: linear-gradient(168deg, rgba(0,1,36,1) 24%, rgba(9,9,121,1) 72%, rgb(127, 5, 152) 100%);
 }
 body{
     min-height: 100%;
